metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/QuickCaseSetting__mdt.object-meta.xml
<CustomObject>
    <label>Quick Case Setting</label>
    <pluralLabel>Quick Case Settings</pluralLabel>
</CustomObject>