metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Hardcoded ID or merge field</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>