metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/AssignedApp__c.field-meta.xml
<CustomField>
    <fullName>AssignedApp__c</fullName>
    <label>Assigned App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident Manager</fullName>
                <default>true</default>
                <label>Incident Manager</label>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>WorkItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>