metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>Hardcoded ID or merge field</description>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>