metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Merge fields</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>