metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/FeedPost__c.field-meta.xml
<CustomField>
    <fullName>FeedPost__c</fullName>
    <label>Feed Post</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>