metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/ManualCaseCreation__c.field-meta.xml
<CustomField>
    <fullName>ManualCaseCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Case Creation</label>
    <type>Checkbox</type>
</CustomField>