metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/OriginalQueue__c.field-meta.xml
<CustomField>
    <fullName>OriginalQueue__c</fullName>
    <description>Mapped to Case.OriginalQueue__c, and used to track the original case owner.</description>
    <label>Original Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>