metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>Hardcoded ID or merge field</description>
    <label>OwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>