metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/RelateToIncident__c.field-meta.xml
<CustomField>
    <fullName>RelateToIncident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relate to Incident</label>
    <type>Checkbox</type>
</CustomField>