metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Merge fields</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>