metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <description>Hardcoded email or merge field</description>
    <label>Web Email</label>
    <type>Email</type>
</CustomField>