metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>