metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/WorkItemOutcome__c.field-meta.xml
<CustomField>
    <fullName>WorkItemOutcome__c</fullName>
    <label>Work Item Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>