metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/WorkItemReportOutcome__c.field-meta.xml
<CustomField>
    <fullName>WorkItemReportOutcome__c</fullName>
    <label>Work Item Report Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>