metadata-sfdx/force-app/main/default/objects/QuickCaseSetting__mdt/fields/WorkItemType__c.field-meta.xml
<CustomField>
    <fullName>WorkItemType__c</fullName>
    <label>Work Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>